fix logo size and background for cover on ios

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -11,7 +11,7 @@ body {
     background-image: url("/img/light_streaks.jpg");
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
+    //background-attachment: fixed;
 
     .logo {
         text-align: center;
